# sdcx

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build.rs  sdc.par
.github/workflows/: periodic.yml  regression.yml  release.yml
benches/: benchmark.rs
parser/: Cargo.toml  build.rs  sdc.par
parser/src/: generated.rs  lib.rs  parser.rs  sdc.rs  sdc_grammar.rs  sdc_grammar_trait.rs  sdc_parser.rs  tests.rs
src/: cli.rs  constraints.rs  errors.rs  file_db.rs  lib.rs  parser.rs  sdc.rs  tests.rs
src/constraints/: clock.rs  object.rs
src/parser/: sdc_grammar.rs  sdc_grammar_trait.rs  sdc_parser.rs
src/sdc/: argument.rs  command.rs  sdc_error.rs  util.rs
testcase/: peridot_cam.sdc  peridot_hostbridge.sdc  peridot_wsg.sdc  scan.sdc  spi_slave_mm.sdc
