[package]
name        = "sdcx"
version     = "0.1.0"
edition     = "2021"
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/dalance/sdcx"
keywords    = []
categories  = []
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = ""

[[bin]]
name = "sdcx"
path = "src/cli.rs"

[dependencies]
anyhow        = "1.0"
clap          = {version = "4.4", features = ["derive"]}
parol_runtime = {version = "0.19.0", features = ["auto_generation"]}
thiserror     = "1.0"

[build-dependencies]
parol         =  "0.24.0"
parol_runtime = {version = "0.19.0", features = ["auto_generation"]}
walkdir       = "2.4.0"

[workspace.dependencies]

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3
