[package]
name        = "sdcx"
version     = "0.1.0"
edition     = "2021"
authors     = ["dalance@gmail.com"]
repository  = "https://github.com/dalance/sdcx"
keywords    = ["eda", "parser"]
categories  = ["parser-implementations"]
license     = "MIT OR Apache-2.0"
readme      = "README.md"
description = "SDC (Synopsys Design Constraints) toolkit"
exclude     = ["testcase/*"]

[[bin]]
name = "sdcx"
path = "src/cli.rs"

[dependencies]
anyhow             = "1.0"
clap               = {version = "4.5", features = ["derive"]}
codespan-reporting = "0.11.1"
flate2             = "1.0"
parol_runtime      = {version = "0.20.1", features = ["auto_generation"]}
regex              = "1.10"
thiserror          = "1.0"

[build-dependencies]
parol         =  "0.26.1"
parol_runtime = {version = "0.20.1", features = ["auto_generation"]}
walkdir       = "2.5.0"

[dev-dependencies]
criterion = "0.5.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = {version = "0.13.0", features = ["flamegraph"]}

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 3

[[bench]]
name = "benchmark"
harness = false
