[package]
name                  = "sdcx-parser"
version               = "0.1.0"
edition               = "2021"
authors.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
license.workspace     = true
readme.workspace      = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parol_runtime = {version = "0.19.0", features = ["auto_generation"]}
thiserror     = "1.0"

[build-dependencies]
parol         =  "0.24.0"
parol_runtime = {version = "0.19.0", features = ["auto_generation"]}
walkdir       = "2.4.0"
